# coin_detector

./: CMakeLists.txt  README.md
include/: CoinDetector.h
src/: CoinDetector.cpp  main.cpp
test_images/: test.txt
